# NanoZIF

./: .gitignore  README.md  pyproject.toml
docs/: ENVIRONMENT.md  RESULTS.md
src/: __init__.py  export_gsd_xyz.py  geometry.py  geometry_rtt.py  interactive_gsd_plot.py  interactive_viz.py  macro_mc.py  main.py  monte_carlo_sim.py  render_fresnel.py  reversible_compression_cli.py  reversible_compression_mc.py  rhombic_dodeca_58.py  sphere_cube_densepack.py  spherical_polyhedra_cli.py  spherical_polyhedra_mc.py  spherical_polyhedra_visualize.py  tile.py  truncated_cube_52.py  unidirectional_adsorption_cli.py  unidirectional_adsorption_mc.py  unidirectional_adsorption_polygons.py  unidirectional_phiA_fast.py  visualization.py
src/cli/: dense_pack.py  hard_poly.py  main.py  reversible.py  tiling.py  unidirectional.py
src/geometry/: __init__.py  core.py  polyhedron.py  rtt.py  shapes.py
src/simulation/: dense_pack.py  hard_polyhedra.py  patch.py  reversible.py  tiling.py  unidirectional.py
src/utils/: plot_log.py  progress.py  render_fresnel.py  visualization.py  viz_gsd.py  viz_standalone.py  viz_unidirectional.py
