[project]
name = "monte-carlo"
version = "0.1.0"
description = "Monte Carlo surface tiling and HOOMD-based compression workflows."
readme = "SHAPE_GUIDE.md"
requires-python = ">=3.11"
dependencies = [
    "numpy==2.3.4",
    "matplotlib==3.10.7",
    "plotly==6.4.0",
    "tqdm==4.67.1",
    "scipy==1.16.3",
    "gsd==4.2.0",
    "pillow==12.0.0",
    "narwhals==2.11.0",
]

[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
